fixed icons styles in toolbar and disabled mapdragging on mobile

--- a/ui2022/src/app/util/common-components/icons/barrel-icon/barrel-icon.component.scss
+++ b/ui2022/src/app/util/common-components/icons/barrel-icon/barrel-icon.component.scss
@@ -1,18 +1,20 @@
-.svg-icon {
-  path {
-    fill: var(--brown);
-  }
-}
-
 .inToolbar {
   cursor: pointer;
   path {
     fill: var(--dark-brown);
   }
 }
-.inToolbar:hover {
+.inToolbar:active {
   cursor: pointer;
   path {
     fill: var(--green);
+  }
+}
+@media only screen and (min-width: 768px) {
+  .inToolbar:hover {
+    cursor: pointer;
+    path {
+      fill: var(--green);
+    }
   }
 }
